0.0.4 data den started mussing block states though